# Nurikabe

./: README.rtf  Readme.txt  index.css  index.html  index.js
API/: Cmd.php  a.out.txt  input1.sm  main.php  rules1.sm
API/mkatoms-2.16 2/: Makefile  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.in  getall  getall.in  getone  getone.in  kkk  mkatoms  mkatoms.c  qqq
