dnl Process this file with autoconf to produce a configure script.

AC_INIT(config.h.in)

AC_CONFIG_HEADER(config.h)

AC_SUBST(DEFAULT_SHELL)
AC_SUBST(START_LINE)
AC_SUBST(BAT_EXT)

dnl >------ checks for programs ------<

AC_PROG_CC
AC_PROG_INSTALL
AC_PATH_PROG(BASH_PATH,bash)
AC_PATH_PROG(SH_PATH,sh)
if test "$BASH_PATH" != "" ; then
	DEFAULT_SHELL="$BASH_PATH"
elif test "$SH_PATH" != "" ; then
	DEFAULT_SHELL="$SH_PATH"
else
	echo "Unable to find a default shell. Will try /bin/sh."
	$DEFAULT_SHELL="/bin/sh"
fi

dnl >------ checks for libraries ------<

dnl >------ checks for header files ------<

dnl >------ checks for typedefs ------<

dnl >------ checks for structures ------<

dnl >------ checks for compiler characteristics ------<

dnl >------ checks for library functions ------<
AC_CACHE_CHECK([for mkstemp],
ezcsp_cv_func_mkstemp,
[AC_TRY_LINK([#include <stdlib.h>
#include <unistd.h>],
[mkstemp("foo");],
ezcsp_cv_func_mkstemp=yes, ezcsp_cv_func_mkstemp=no)])
if test "$ezcsp_cv_func_mkstemp" = yes; then
  AC_DEFINE(HAVE_MKSTEMP, 1, [Define if mkstemp is available.])
fi

AC_MSG_CHECKING(for mkstemps in libiberty)
save_LIBS="$LIBS"
LIBS="-liberty $LIBS"
AC_LINK_IFELSE([
 AC_LANG_PROGRAM([[int mkstemps (char *pattern, int suffix_len);]],
    [[mkstemps("XXXXXX",0);]]
 )],
 [AC_MSG_RESULT(yes)
  HAVE_MKSTEMPS=yes
  AC_DEFINE(HAVE_MKSTEMPS, 1, [Define if mkstemps is available in libiberty.])
 ],
 [AC_MSG_RESULT(no)
  HAVE_MKSTEMPS=no
  LIBS="$save_LIBS"
])


dnl >------ checks for system services ------<

AC_SYS_INTERPRETER
if test "$interpval" = "no" ; then
	START_LINE=""

	dnl check if .bat files are DOS batch files
	AC_CACHE_CHECK(whether .bat is the extension for batch files, acirc_cv_sys_bat,
		echo "echo works >conftest.res" >conftest.bat
		chmod 0444 conftest.bat
		./conftest.bat 1>&5 2>&5
		if test -f conftest.res ; then
			acirc_cv_sys_bat="yes"
			rm -f conftest.res
		else
			acirc_cv_sys_bat="no"
		fi
		rm -f conftest.bat
	)
	if test "$acirc_cv_sys_bat" = "yes" ; then
		BAT_EXT=".bat"
	fi
else
	START_LINE="#! $DEFAULT_SHELL"
fi

AC_OUTPUT(Makefile getone getall)
